# geneformer-plain

./: README.md  pyproject.toml
checkpoints/: .gitignore
data/: is_bivalent.csv  is_longrange_tf.csv
data/datasets/: .gitignore
data/word_embeddings/: .gitignore
masters/data/lightning/: __init__.py  ner.py  nerSplitDataModule.py  pretraining.py  seqCls.py
masters/data/utils/: __init__.py  cell.py  gensim_interface.py  mlmDataCollator.py  nerDataCollator.py  seqClsDataCollator.py
masters/model/embedder/: __init__.py  wordEmbedding.py
masters/model/lightning/: __init__.py  pretraining.py  sequenceClassification.py  tokenClassification.py
masters/model/model/: __init__.py  base.py  config.py  pretraining.py  sequenceClassification.py  tokenClassification.py
masters/model/pe/: __init__.py  basePE.py  sinusoidalPE.py  sinusoidalRPE.py  t5RPE.py  trainedPE.py  trainedRPE.py
masters/model/transformer/: __init__.py  block.py  encoder.py  mha.py
masters/model/unembedder/: __init__.py  languageModeling.py  pooling.py  sequenceClassification.py  tokenClassification.py
masters/model/utils/: __init__.py  activation.py  callback.py  initialization.py  metrics.py  pe_from_name.py  setup.py
masters/train/: ddp.sh  finetune.py  pretrain.py
notebooks/: subset_genecorpus.ipynb
